@@ -143,7 +143,7 @@
     <module id="drivel" branch=""/>
     <module id="drwright"/>
     <module id="eggcups"/>
-    <module id="epiphany-extensions" branch=""/>
+    <module id="epiphany-extensions"/>
     <module id="evolution-brainread"/>
     <module id="evolution-jescs"/>
     <module id="f-spot"/>
