@@ -1,5 +1,11 @@
 2007-03-01  Claude Paroz  <claude@2xlibre.net>
 
+	* gnome-modules.xml.in: Add references to g-s-t shared folders and
+	anjuta manuals.
+	* releases.xml.in: Make epiphany-extensions appear in gnome-extras.
+
+2007-03-01  Claude Paroz  <claude@2xlibre.net>
+
 	* gnome-modules.xml.in:
 	* releases.xml.in: Removed old modules (red-carpet, rmm-utils,
 	libgnomesu, notifier, update-manager, gnome-pim, battfink,
